Update file-list logic

--- a/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.scss
+++ b/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.scss
@@ -8,3 +8,55 @@
 @import '../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
 @import '../../styles/shared-styles.scss';
 @import './mgt-file-list.theme.scss';
+
+$background-color: var(--file-list-background-color, set-var(background-color, $theme-default, $common));
+$max-height: var(--file-list-max-height, 425px);
+
+:host {
+  font-family: $font-family;
+}
+
+:host .file-list-wrapper,
+mgt-file-item .file-list-wrapper {
+  background: $background-color;
+  box-shadow: 0px 3.2px 7.2px rgba(0, 0, 0, 0.132), 0px 0.6px 1.8px rgba(0, 0, 0, 0.108);
+  max-height: $max-height;
+  position: relative;
+
+  .file-list {
+    display: flex;
+    padding: 0;
+    flex-direction: column;
+    height: $max-height;
+    overflow: scroll;
+
+    .file-item {
+      border-bottom: var(--file-list-item-border-bottom, 1px solid $gray30);
+    }
+
+    .show-more {
+      border-bottom: none;
+      text-align: center;
+      margin: 1em;
+      list-style-type: none;
+      cursor: pointer;
+    }
+  }
+
+  .file-list-overflow {
+    content: '';
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    pointer-events: none;
+    width: 100%;
+    height: 4em;
+    @include file-list__overflow;
+
+    &.fadeout {
+      visibility: hidden;
+      opacity: 0;
+    }
+  }
+}
