--- a/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.theme.scss
+++ b/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.theme.scss
@@ -6,3 +6,13 @@
  */
 
 @import '../../styles/shared-sass-variables.scss';
+
+// mixins
+@mixin file-list__overflow() {
+  // todo: mind the dark theme
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 90%);
+  background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 90%);
+  background-image: -o-linear-gradient(top, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 90%);
+  background-image: -ms-linear-gradient(top, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 90%);
+  background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 90%);
+}
