added check for absolute positining in flyout

--- a/packages/mgt-components/src/components/sub-components/mgt-flyout/mgt-flyout.scss
+++ b/packages/mgt-components/src/components/sub-components/mgt-flyout/mgt-flyout.scss
@@ -9,22 +9,41 @@
 @import '../../../styles/shared-sass-variables.scss';
 
 .root {
+  .scout-top {
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+
+  .scout-bottom {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+  }
+
   .flyout {
-    display: none;
     position: fixed;
     z-index: 9999999;
-    opacity: 0;
-    box-shadow: set-var(box-shadow, $theme-default, $common);
+
+    slot {
+      box-shadow: set-var(box-shadow, $theme-default, $common);
+      opacity: 0;
+      z-index: 9999999;
+      display: none;
+    }
   }
 
   &.visible {
     .flyout {
-      display: inline-block;
-      animation-name: fadeIn;
-      animation-duration: 0.3s;
-      animation-timing-function: cubic-bezier(0.1, 0.9, 0.2, 1);
-      animation-fill-mode: both;
       transition: top 0.3s ease, bottom 0.3s ease, left 0.3s ease;
+
+      slot {
+        display: inline-block;
+        animation-name: fadeIn;
+        animation-duration: 0.3s;
+        animation-timing-function: cubic-bezier(0.1, 0.9, 0.2, 1);
+        animation-fill-mode: both;
+      }
     }
   }
 }
