--- a/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.scss
+++ b/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.scss
@@ -17,6 +17,7 @@ $file-item-background-color--hover: var(
 
 :host {
   font-family: $font-family;
+  font-size: $font-size;
 }
 
 :host .file-list-wrapper,
