--- a/packages/mgt-components/src/styles/shared-sass-variables.scss
+++ b/packages/mgt-components/src/styles/shared-sass-variables.scss
@@ -173,6 +173,7 @@ $depth-shadow--light: 0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132);
 $depth-shadow--dark: 0 5px 14px 0 rgba(0, 0, 0, 0.8);
 
 $font-family: var(--default-font-family);
+$font-size: var(--default-font-size);
 
 /* ---------------Common theming vars / functions / mixins--------------- */
 $themes: ('light', 'dark');
