Updated file picker

--- a/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.scss
+++ b/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.scss
@@ -14,6 +14,8 @@ $file-item-background-color--hover: var(
   --file-item-background-color--hover,
   set-var(list__item__background-color--hover, $theme-default, $common)
 );
+$width: var(--file-list-width);
+$max-height: var(--file-list-max-height);
 
 :host {
   font-family: $font-family;
@@ -25,14 +27,28 @@ mgt-file-item .file-list-wrapper {
   background: $background-color;
   box-shadow: 0px 3.2px 7.2px rgba(0, 0, 0, 0.132), 0px 0.6px 1.8px rgba(0, 0, 0, 0.108);
   position: relative;
+  width: $width;
+  max-height: $max-height;
+
+  ul {
+    padding: 0;
+    list-style-type: none;
+  }
 
   .file-list {
     display: flex;
     padding: 0;
     flex-direction: column;
+    margin: 0;
+    height: $max-height;
+
+    &.scrollable {
+      overflow: scroll;
+    }
 
     .file-item {
       border-bottom: var(--file-list-item-border-bottom, 1px solid $gray30);
+      list-style: none;
 
       &:hover {
         background-color: $file-item-background-color--hover;
@@ -44,6 +60,23 @@ mgt-file-item .file-list-wrapper {
       text-align: center;
       margin: 1em;
       list-style-type: none;
+    }
+  }
+
+  .file-list-overflow {
+    content: '';
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    pointer-events: none;
+    width: 100%;
+    height: 4em;
+    @include file-list__overflow;
+
+    &.fadeout {
+      visibility: hidden;
+      opacity: 0;
     }
   }
 }
