Fixed flyout position when used in a parent with css transform (#921)
* added check for absolute positining in flyout

* undo some style changes

Co-authored-by: Nicolas Vogt <nicolasjvogt@gmail.com>

--- a/packages/mgt-components/src/components/sub-components/mgt-flyout/mgt-flyout.scss
+++ b/packages/mgt-components/src/components/sub-components/mgt-flyout/mgt-flyout.scss
@@ -9,6 +9,18 @@
 @import '../../../styles/shared-sass-variables.scss';
 
 .root {
+  .scout-top {
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+
+  .scout-bottom {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+  }
+
   .flyout {
     display: none;
     position: fixed;
