--- a/packages/mgt-components/src/components/mgt-file/mgt-file.theme.scss
+++ b/packages/mgt-components/src/components/mgt-file/mgt-file.theme.scss
@@ -9,3 +9,13 @@
 
 $line2__color: var(--line2-color, set-var(color__sub1, $theme-default, $common));
 $line3__color: var(--line3-color, set-var(color__sub1, $theme-default, $common));
+
+$file: (
+  background-color: (
+    _var: --file-background-color,
+    light: $background-color__main--light,
+    dark: #424242
+  )
+);
+
+@include create-themes($file);
