--- a/packages/mgt-components/src/styles/theme.scss
+++ b/packages/mgt-components/src/styles/theme.scss
@@ -15,3 +15,4 @@
 
 @import '../components/mgt-tasks-base/mgt-tasks-base.theme.scss';
 @import '../components/mgt-file/mgt-file.theme.scss';
+@import '../components/mgt-file-list/mgt-file-list.theme.scss';
