--- a/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.scss
+++ b/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.scss
@@ -37,6 +37,7 @@ mgt-file-item .file-list-wrapper {
       border-bottom: var(--file-list-item-border-bottom, none);
       margin: 0 4px;
       border-radius: 2px;
+      cursor: pointer;
 
       &:hover {
         background-color: $file-item-background-color--hover;
@@ -50,9 +51,11 @@ mgt-file-item .file-list-wrapper {
   .show-more {
     border-bottom: none;
     text-align: center;
-    padding: 12px;
-    margin-bottom: -6px;
+    font-size: 12px;
+    padding: 6px;
     list-style-type: none;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
     cursor: pointer;
     background-color: set-var(background-color__sub2, $theme-default, $common);
 
