providing relative anchor of personImage for presence

--- a/packages/mgt-components/src/components/mgt-person/mgt-person.scss
+++ b/packages/mgt-components/src/components/mgt-person/mgt-person.scss
@@ -66,6 +66,7 @@ mgt-person .person-root {
   color: $color;
 
   .user-avatar {
+    position: relative;
     width: $avatar-size;
     height: $avatar-size;
     display: flex;
