--- a/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.scss
+++ b/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.scss
@@ -10,8 +10,29 @@
 @import './mgt-file-list.theme.scss';
 
 $file-item-background-color--hover: set-var(list__item__background-color--hover, $theme-default, $file-list);
+$file-item-background-color--active: set-var(list__item__background-color--active, $theme-default, $file-list);
 $background-color: set-var(list__background-color, $theme-default, $file-list);
-
+$file-list-border-radius: var(--file-list-border-radius, 4px);
+$file-list-box-shadow: var(
+  --file-list-box-shadow,
+  0px 3.2px 7.2px rgba(0, 0, 0, 0.132),
+  0px 0.6px 1.8px rgba(0, 0, 0, 0.108)
+);
+$file-list-border: var(--file-list-border, none);
+$file-item-border-radius: var(--file-item-border-radius, 2px);
+$file-item-margin: var(--file-item-margin, 0 4px);
+$show-more-button-font-size: var(--show-more-button-font-size, 12px);
+$show-more-button-padding: var(--show-more-button-padding, 6px);
+$show-more-button-border-bottom-right-radius: var(--show-more-button-border-bottom-right-radius, 4px);
+$show-more-button-border-bottom-left-radius: var(--show-more-button-border-bottom-left-radius, 4px);
+$show-more-button-background-color: var(
+  --show-more-button-background-color,
+  set-var(background-color__sub2, $theme-default, $common)
+);
+$show-more-button-background-color--hover: var(
+  --show-more-button-background-color--hover,
+  $file-item-background-color--hover
+);
 :host {
   font-family: $font-family;
   font-size: $font-size;
@@ -20,8 +41,9 @@ $background-color: set-var(list__background-color, $theme-default, $file-list);
 :host .file-list-wrapper,
 mgt-file-item .file-list-wrapper {
   background-color: $background-color;
-  box-shadow: 0px 3.2px 7.2px rgba(0, 0, 0, 0.132), 0px 0.6px 1.8px rgba(0, 0, 0, 0.108);
-  border-radius: 4px;
+  box-shadow: $file-list-box-shadow;
+  border-radius: $file-list-border-radius;
+  border: $file-list-border;
   position: relative;
   color: $color;
   display: flex;
@@ -29,15 +51,20 @@ mgt-file-item .file-list-wrapper {
 
   .file-list {
     display: flex;
-    padding: 4px 0;
+    padding: var(--file-list-padding, 4px 0);
+    margin: var(--file-list-margin, 0);
     flex-direction: column;
     list-style: none;
 
     .file-item {
       border-bottom: var(--file-item-border-bottom, none);
-      margin: 0 4px;
-      border-radius: 2px;
+      margin: $file-item-margin;
+      border-radius: $file-item-border-radius;
       cursor: pointer;
+
+      mgt-file {
+        --file-background-color: $background-color;
+      }
 
       &:hover {
         background-color: $file-item-background-color--hover;
@@ -46,21 +73,28 @@ mgt-file-item .file-list-wrapper {
           --file-background-color: $file-item-background-color--hover;
         }
       }
+
+      &:active {
+        background-color: $file-item-background-color--active;
+
+        mgt-file {
+          --file-background-color: $file-item-background-color--active;
+        }
+      }
     }
   }
+
   .show-more {
-    border-bottom: none;
     text-align: center;
-    font-size: 12px;
-    padding: 6px;
-    list-style-type: none;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
+    font-size: $show-more-button-font-size;
+    padding: $show-more-button-padding;
+    border-bottom-right-radius: $show-more-button-border-bottom-right-radius;
+    border-bottom-left-radius: $show-more-button-border-bottom-left-radius;
     cursor: pointer;
-    background-color: set-var(background-color__sub2, $theme-default, $common);
+    background-color: $show-more-button-background-color;
 
     &:hover {
-      background-color: $file-item-background-color--hover;
+      background-color: $show-more-button-background-color--hover;
     }
   }
 }
