mgt-file-list (depends on mgt-file) (#919)
* Added initial files and some structure

* Added Graph call for insights

* wip

* Added header

* Style tweaks

* Style tweaks

* Initial checking for mgt-file

* Add properties and css to mgt-file

* Add story to mgt-file

* Remove file-picker

* Add license to file graph file

* Add file sample

* Remove unused graph function

* Fix exports

* Cleanup exports and react project

* Add generated react file

* Initial checkin for file-list

* Update file-list logic

* Build react project

* Add hover state

* Address pr comment

* Add personViewType back to react

* update view/personview logic

* Fix bug

* Update person view in react project

* File list polish. Add stories. Add react generated file.

* Update packages/mgt-components/src/components/mgt-file/mgt-file.ts

* formatting

* Tweak styles

* Add function to render more files.

* Add file filter

* Add dark theme to file and file-list

* Design tweak

* Update packages/mgt-components/src/components/mgt-file-list/mgt-file-list.ts

Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>

* Address pr comments

* Cleanup unused var

* Address pr comments

* Add @cssprop and @fires comments

* Address pr feedback

* Cleanup file list

* Add disable file expansion functionality.

* Address pr comments

* address nit pick :D

Co-authored-by: Shane Weaver <shweaver@microsoft.com>
Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>
Co-authored-by: Nikola Metulev <nikolame@microsoft.com>

--- a/packages/mgt-components/src/styles/shared-sass-variables.scss
+++ b/packages/mgt-components/src/styles/shared-sass-variables.scss
@@ -173,6 +173,7 @@ $depth-shadow--light: 0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132);
 $depth-shadow--dark: 0 5px 14px 0 rgba(0, 0, 0, 0.8);
 
 $font-family: var(--default-font-family);
+$font-size: var(--default-font-size);
 
 /* ---------------Common theming vars / functions / mixins--------------- */
 $themes: ('light', 'dark');
@@ -333,6 +334,11 @@ $common: (
     _var: --list-background-color,
     dark: $list__background-color--dark,
     light: $list__background-color--light
+  ),
+  list__item__background-color--hover: (
+    _var: --list-item-background-color--hover,
+    dark: $list__item__background-color--hover--dark,
+    light: $list__item__background-color--hover--light
   )
 );
 
