Added @fluentui/web-components and fluent-progress-ring

--- a/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.scss
+++ b/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.scss
@@ -97,4 +97,8 @@ mgt-file-item .file-list-wrapper {
       background-color: $show-more-button-background-color--hover;
     }
   }
+
+  .show-more-progress {
+    margin: 10px auto;
+  }
 }
