--- a/packages/mgt-components/src/components/mgt-login/mgt-login.scss
+++ b/packages/mgt-components/src/components/mgt-login/mgt-login.scss
@@ -109,6 +109,10 @@ mgt-login .popup-content {
       color: black !important;
       .list-box-option {
         margin-bottom: 10px;
+        mgt-person {
+          --details-spacing: 9px;
+          --avatar-size: 40px;
+        }
         &:hover {
           background-color: #e5e5e5;
         }
@@ -167,8 +171,9 @@ mgt-login .popup-content {
     margin-bottom: 30px;
     text-align: center;
     mgt-person {
-      --avatar-size: 75px;
+      --avatar-size: 72px;
       --avatar-direction: column;
+      --details-spacing: 0px;
     }
   }
 }
