tab indexing too

--- a/packages/mgt-components/src/components/mgt-login/mgt-login.scss
+++ b/packages/mgt-components/src/components/mgt-login/mgt-login.scss
@@ -148,6 +148,11 @@ mgt-login .popup-content {
             background: rgba(0, 0, 0, 0.1);
           }
         }
+        mgt-person {
+          &:after {
+            background-image: none;
+          }
+        }
       }
     }
     &:after {
