--- a/packages/mgt-components/src/components/mgt-person/mgt-person.scss
+++ b/packages/mgt-components/src/components/mgt-person/mgt-person.scss
@@ -32,6 +32,8 @@ $line3-text-transform: var(--line3-text-transform, #{$text-transform});
 
 $details-spacing: --details-spacing;
 
+$person-flex-direction: --person-flex-direction;
+
 $presence-color-online: #6bb700;
 $presence-color-dnd: #c50f1f;
 $presence-color-away: #ffaa44;
@@ -64,6 +66,7 @@ mgt-person .person-root {
   display: flex;
   align-items: center;
   color: $color;
+  flex-direction: var($person-flex-direction, row);
 
   .user-avatar {
     position: relative;
