Add support for cut, copy and paste events in people-picker

--- a/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -72,6 +72,11 @@ mgt-people-picker .root {
         padding-right: 4px;
       }
 
+      &__highlighted {
+        background-color: #0078d4;
+        text-decoration-color: #ffffff;
+      }
+
       &__overflow {
         margin-left: 25px;
 
