Update the highlight CSS and behaviour when not focused

--- a/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -13,7 +13,7 @@
 :host {
   font-family: $font-family;
   font-size: 14px;
-  line-height: 20px;
+  line-height: 24px;
   height: 24px;
   display: contents;
   overflow: hidden;
@@ -21,7 +21,7 @@
   width: 135px;
   left: 0px;
   top: 0px;
-  border-radius: 20px;
+  border-radius: 12px;
 }
 
 :host .root,
@@ -58,7 +58,7 @@ mgt-people-picker .root {
       display: flex;
       margin: 0 5px 6px 0;
       align-items: center;
-      border-radius: 15px;
+      border-radius: 12px;
       height: 24px;
       white-space: nowrap;
       text-overflow: ellipsis;
@@ -89,21 +89,23 @@ mgt-people-picker .root {
           top: 0;
           right: 0;
           @include selected-person__overflow($theme-default);
+          background-image: none;
         }
 
         &__close-icon {
-          height: 100%;
-          top: 0;
-          margin-top: 4px;
-          margin-left: 10px;
-          position: absolute;
-          line-height: normal;
           font-family: 'FabricMDL2Icons';
-          padding-right: 7px;
           cursor: pointer;
-          right: 0;
           background-color: set-var(selected-person__background-color, $theme-default, $people-picker);
           color: $color;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          position: absolute;
+          height: 24px;
+          width: 24px;
+          right: 0px;
+          top: 0px;
+          border-radius: 12px;
         }
       }
     }
@@ -131,6 +133,11 @@ mgt-people-picker .root {
           color: white;
         }
       }
+    }
+
+    &__person-wrapper-highlighted:hover {
+      @extend .selected-list__person-wrapper-highlighted;
+      background-color: #006cbe;
     }
 
     .flyout {
